kubernetes_yaml/app/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shpl-app
spec:
  selector:
    matchLabels:
      app: shpl-app
  replicas: 1
  template:
    metadata:
      labels:
        app: shpl-app
    spec:
      containers:
      - name: shpl-app
        image: sksourcehub/sh-app:latest
        command: ['python', 'manage.py' , 'runserver' , '0.0.0.0:9000']
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: app-volume
          mountPath: /home/app_data
      imagePullSecrets:
      - name: registrykey
      volumes:
      - name: app-volume
        persistentVolumeClaim:
          claimName: app-pv-claim
