kubernetes_yaml/app/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shpl-service
spec:
  selector:
    app: shpl-app
  ports:
  - protocol: "TCP"
    port: 9000
    targetPort: 9000
  type: LoadBalancer
