kubernetes_yaml/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: shpl-service
      port:
        number: 9000
  rules:
  - host: application.mydomain.com
    http:
      paths:
        - backend:
            service: 
              name: shpl-service
              port: 
                number: 9000
          pathType: ImplementationSpecific
